# langchainChatBot

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  config.toml.example  main.py  migrate_db.py  pyproject.toml  requirements.txt  test_chat_api.py  test_llm_service.py
backend/api/: __init__.py  _version.py
backend/api/core/: __init__.py  config_manager.py  config_models.py  config_toml.py  config_watcher.py  database.py  qdrant_manager.py  utils.py
backend/api/migrations/: env.py
backend/api/migrations/versions/: 001_initial_schema.py
backend/api/models/: database.py
backend/api/routes/: __init__.py  chat.py  config.py  embedding_config.py  knowledge.py  llm_config.py
backend/api/services/: __init__.py  base_service.py  chat_history_service.py  chat_service.py
docs/: 20250622_voice_repliation_test.md  BytePlus Digital Human POC (for CloudOne）  .md  api-documentation.md  architecture.md  code-quality-tools.md  configuration-management.md  deployment-optimization.md  development-guidelines.md  development_tasks.md  functional_spec_digital_human.md  prd_digital_human.md  三分钟数字人产品介绍.md  数字人交互 Websocket 通信协议-外部.md
docs/archive/: dynamic-config-updates.md  mysql-chat-history.md
docs/diagrams/: system-architecture.md
frontend/: .env.example  .prettierignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  index.tsx  setupTests.ts
frontend/src/components/: ChatInput.tsx  Layout.tsx  OptimizedChatMessage.tsx  SessionCard.tsx  VirtualizedMessageList.tsx
frontend/src/components/Chat/: ChatHeader.tsx  ChatInput.tsx  ChatLayout.tsx  ChatMessages.tsx  SessionSidebar.tsx
frontend/src/components/DigitalHuman/: DigitalHumanButton.tsx  DigitalHumanView.tsx  MicrophoneButton.tsx  index.ts
frontend/src/components/common/: ConfirmationDialog.tsx  DataTable.tsx  ErrorAlert.tsx  FileUploadArea.tsx  LoadingSpinner.tsx  PageContainer.tsx  SearchBar.tsx  StatusChip.tsx  index.ts
frontend/src/hooks/: useApi.ts  useChatPageHandlers.ts  useChatPageState.ts  useChatState.ts  useChatStreaming.ts  useConfig.ts  useResponsive.ts  useScroll.ts
frontend/src/pages/: ChatPage.tsx  KnowledgePage.tsx  LlmConfigPage.tsx
frontend/src/services/: api.ts
frontend/src/tests/components/: Layout.test.tsx
frontend/src/tests/components/common/: ErrorAlert.test.tsx  LoadingSpinner.test.tsx  PageContainer.test.tsx  SearchBar.test.tsx
frontend/src/tests/hooks/: useApi.test.ts  useChatState.test.ts  useChatStreaming.test.ts  useConfig.test.ts  useUtilityHooks.test.ts
frontend/src/tests/integration/: ApiIntegration.test.tsx  ChatIntegration.test.tsx
frontend/src/tests/pages/: ChatPage.test.tsx  KnowledgePage.test.tsx  LlmConfigPage.test.tsx
frontend/src/themes/: index.ts
frontend/src/utils/: config.ts  index.ts  logger.ts
